rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__view_default_filters__explicit_filter_overrides_default.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/view_default_filters.rs
assertion_line: 115
expression: result
---
orders_view_with_unless__currency | orders_view_with_unless__count
----------------------------------+-------------------------------
EUR                               | 5
