rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__view_default_filters__unless_does_not_trigger_on_projection_alone.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/view_default_filters.rs
assertion_line: 79
expression: result
---
orders_view_with_unless__currency | orders_view_with_unless__count
----------------------------------+-------------------------------
USD                               | 5
