rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__view_default_filters__unless_keeps_default_filter_when_member_is_not_touched.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/view_default_filters.rs
assertion_line: 104
expression: result
---
orders_view_with_unless__country | orders_view_with_unless__count
---------------------------------+-------------------------------
CA                               | 1                             
DE                               | 1                             
FR                               | 1                             
GB                               | 1                             
US                               | 1
