rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__view_default_filters__virtual_switch_default_filter_collapses_union.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/view_default_filters.rs
assertion_line: 45
expression: result
---
orders_view__currency | orders_view__count
----------------------+-------------------
USD                   | 5
